--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,14 +13,19 @@ package:
 
 source:
   url: https://developer.download.nvidia.com/compute/cudnn/redist/cudnn/{{ platform }}/cudnn-{{ platform }}-{{ version }}_cuda{{ cuda_major }}-archive.{{ extension }}
-  sha256: a3e2509028cecda0117ce5a0f42106346e82e86d390f4bb9475afc976c77402e  # [linux64 and cuda_major == "11"]
-  sha256: 475333625c7e42a7af3ca0b2f7506a106e30c93b1aa0081cd9c13efb6e21e3bb  # [linux64 and cuda_major == "12"]
-  sha256: 91c37cfb458f541419e98510f13aaf5975c0232c613e18b776385490074eea17  # [aarch64 and cuda_major == "11"]
-  sha256: e98b7c80010785e5d5ca01ee4ce9b5b0c8c73587ea6f8648be34d3f8d1d47bd1  # [aarch64 and cuda_major == "12"]
-  sha256: f23fd7d59f9d4f743fa926f317dab0d37f6ea21edb2726ceb607bea45b0f9f36  # [ppc64le and cuda_major == "11"]
-  sha256: 8574d291b299f9cc0134304473c9933bd098cc717e8d0876f4aba9f9eebe1b76  # [ppc64le and cuda_major == "12"]
-  sha256: 5e45478efe71a96329e6c0d2a3a2f79c747c15b2a51fead4b84c89b02cbf1671  # [win and cuda_major == "11"]
-  sha256: 94fc17af8e83a26cc5d231ed23981b28c29c3fc2e87b1844ea3f46486f481df5  # [win and cuda_major == "12"]
+  {% if cuda_major == "11" %}
+  # CUDA 11
+  sha256: a3e2509028cecda0117ce5a0f42106346e82e86d390f4bb9475afc976c77402e  # [linux64]
+  sha256: 91c37cfb458f541419e98510f13aaf5975c0232c613e18b776385490074eea17  # [aarch64]
+  sha256: f23fd7d59f9d4f743fa926f317dab0d37f6ea21edb2726ceb607bea45b0f9f36  # [ppc64le]
+  sha256: 5e45478efe71a96329e6c0d2a3a2f79c747c15b2a51fead4b84c89b02cbf1671  # [win]
+  {% else %}
+  # CUDA 12
+  sha256: 475333625c7e42a7af3ca0b2f7506a106e30c93b1aa0081cd9c13efb6e21e3bb  # [linux64]
+  sha256: e98b7c80010785e5d5ca01ee4ce9b5b0c8c73587ea6f8648be34d3f8d1d47bd1  # [aarch64]
+  sha256: 8574d291b299f9cc0134304473c9933bd098cc717e8d0876f4aba9f9eebe1b76  # [ppc64le]
+  sha256: 94fc17af8e83a26cc5d231ed23981b28c29c3fc2e87b1844ea3f46486f481df5  # [win]
+  {% endif %}
 
 build:
   number: 0
